--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "ft-components",
-  "version": "0.0.1",
+  "name": "ft-component",
+  "version": "0.0.7",
   "license": "MIT",
+  "private": false,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,17 +14,23 @@
     "element-plus": "^2.2.19",
     "lockr": "^0.9.0-beta.0",
     "pinyin-match": "^1.2.2",
-    "vue": "^3.2.36"
+    "vue": "^3.2.36",
+    "vue-virtual-scroller": "^2.0.0-alpha.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
     "sass": "^1.55.0",
     "vite": "^3.1.8"
   },
-  "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}": [
-      "npm run lint",
-      "git add"
-    ]
-  }
+  "main": "dist/ft-component.es.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/icoller/ft-component.git"
+  },
+  "author": "Coller",
+  "bugs": {
+    "url": "https://github.com/icoller/ft-component/issues"
+  },
+  "homepage": "https://github.com/icoller/ft-component#readme",
+  "description": ""
 }
